crates/goat_codegen/tests/integration/snapshots/legal_linked_comments.snap
---
source: crates/goat_codegen/tests/integration/tester.rs
---
########## 0
/* @license */
/* @license */
foo;bar;
----------
foo;
bar;

/*! For license information please see test.js */
########## 1
/* @license */
/* @preserve */
foo;bar;
----------
foo;
bar;

/*! For license information please see test.js */
########## 2
/* @license */
//! KEEP
foo;bar;
----------
foo;
bar;

/*! For license information please see test.js */
########## 3
/* @license */
/*! KEEP */
foo;bar;
----------
foo;
bar;

/*! For license information please see test.js */
########## 4
/* @license *//*! KEEP */
foo;bar;
----------
foo;
bar;

/*! For license information please see test.js */
########## 5
function test() {
    /*
    * @license
    * Copyright notice 2
    */
    bar;
}
----------
function test() {
	bar;
}

/*! For license information please see test.js */
########## 6
function bar() { var foo; /*! #__NO_SIDE_EFFECTS__ */ function baz() { } }
----------
function bar() {
	var foo;
	function baz() {}
}

/*! For license information please see test.js */
########## 7
function foo() {
	(() => {
		/**
		 * @preserve
		 */
	})();
	/**
	 * @preserve
	 */
}
/**
 * @preserve
 */
----------
function foo() {
	(() => {
		/**
		* @preserve
		*/
	})();
	/**
	* @preserve
	*/
}
/**
* @preserve
*/
/*! For license information please see test.js */
########## 8
/**
* @preserve
*/

----------
/**
* @preserve
*/

/*! For license information please see test.js */
########## 9
/*!
 * legal comment
 */

"use strict";

export const foo = 'foo';
----------
'use strict';
export const foo = 'foo';

/*! For license information please see test.js */
